Style Holy Grid Layout with FlexBox Use flex-shrink: 0 for the sidebar to avoid it collapsing. Use flex:1 for the content to fill all the space.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,78 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  
+}
+a {
+  text-decoration: none;
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+li {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.content {
+  display: flex;
+  flex: 1;
 }
 
 .header {
   height: 72px;
+  font-size: 36px;
+  font-weight: 800px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px;
 }
+
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .sidebar {
+  padding: 16px;
   width: 300px;
   background: royalblue;
+  display: flex;
+  flex-direction: column;  
+  gap: 16px;
+  flex-shrink: 0;  
 }
 
+.cards {
+  display: flex;  
+  flex-wrap: wrap;
+  padding: 32px;
+}
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  margin: 16px;
+  padding: 16px;
 }
